# Inteligencia-Artificial

./: README.md
Entrega 1/: README.md
Entrega 1/Punto 1/: 2.AStarSearch.ipynb  2.BestFirstSearch.ipynb  problema.md
Entrega 1/Punto 3/: metro_search.py  problema.md
Entrega 2/: .gitignore  README.md  requirements.txt  taller2.md
Entrega 2/models/: hgb.pkl  mlp.pkl  rf.pkl
Entrega 2/notebooks/: 01_eda.ipynb  02_modeling.ipynb
Entrega 2/reports/metrics/: best_params_hgb.json  best_params_mlp.json  best_params_rf.json  cv_results_hgb.csv  cv_results_mlp.csv  cv_results_rf.csv  feature_importances_rf.csv  metrics_summary.json  training_outputs.json
Entrega 2/src/: __init__.py  evaluate.py  features.py  predict.py  train.py  utils.py
Punto 1/: problema.md
Punto 2/: Maze_problem.ipynb  problema.md
Punto 3/: README.md  metro_search.py  problema.md
llm_restaurant_recommender/: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
llm_restaurant_recommender/.cursor/rules/: core.md
llm_restaurant_recommender/data/: generate_dataset.py  generate_reviews.py  generated_reviews.csv  restaurants_sample.csv
llm_restaurant_recommender/models/: __init__.py  local_model_integration.py
llm_restaurant_recommender/tests/: README.md  __init__.py  test_common.py  test_llm_processing.py  test_ranking.py
llm_restaurant_recommender/utils/: __init__.py  common.py  geolocation.py  llm_processing.py  logger.py  ranking.py  rate_limiter.py
