[project]
name = "llm-restaurant-recommender"
version = "0.1.0"
description = "Asistente LLM para recomendación de restaurantes usando Phi-4 y OpenStreetMap"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.20,<2.0",
    "pandas>=2.0.0,<3.0",
    "requests>=2.31.0,<3.0",
    "geopy>=2.3.0,<3.0",
    "transformers>=4.35.0,<5.0",
    "accelerate>=0.24.0,<1.0",
    "torch>=2.0.0,<3.0",
    "huggingface-hub>=0.20.0,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
